@@ -1,3 +1,8 @@
+2009-11-09  Jason Merrill  <jason@redhat.com>
+
+	PR c++/41972
+	* g++.dg/template/ref4.C: New.
+
 2009-11-04  Jason Merrill  <jason@redhat.com>
 
 	PR c++/36912
